--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
     "env": {
       "es6": true,
       "browser": true,
-      "jquery": true
+      "jquery": true,
+      "jest": true
     },
     
     "extends": "airbnb",
@@ -12,4 +13,5 @@
       "no-underscore-dangle": "off",
       "linebreak-style": ["error", "windows"]
     }
+    
   }
