--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
-    "nodemon": "^2.0.12"
+    "jest": "^27.4.5",
+    "nodemon": "^2.0.12",
+    "supertest": "^6.1.6"
   },
   "keywords": [
     "example",
