--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,9 +12,9 @@ on:
 jobs:
   build:
     env:
-      MONGODB_URI=mongodb+srv://user123:9BWmlD3WEOw98bu5@cluster0.dxulw.mongodb.net/drawing-app?retryWrites=true&w=majority
-      TEST_MONGODB_URI=mongodb+srv://user123:9BWmlD3WEOw98bu5@cluster0.dxulw.mongodb.net/drawing-app-testing?retryWrites=true&w=majority
-      PORT=3003
+      MONGODB_URI: mongodb+srv://user123:9BWmlD3WEOw98bu5@cluster0.dxulw.mongodb.net/drawing-app?retryWrites=true&w=majority
+      TEST_MONGODB_URI: mongodb+srv://user123:9BWmlD3WEOw98bu5@cluster0.dxulw.mongodb.net/drawing-app-testing?retryWrites=true&w=majority
+      PORT: 3003
 
     runs-on: ubuntu-latest
 
